# frobo

./: LICENSE  README.md
bagfile/: gmapping.pgm  gmapping.yaml  gmapping_delta_0.1_linear_update_0.1_angular_update_0.1.pgm  gmapping_delta_0.1_linear_update_0.1_angular_update_0.1.yaml  gmapping_delta_0.1_linear_update_0.1_angular_update_0.1_minimumScore_10000.pgm  gmapping_delta_0.1_linear_update_0.1_angular_update_0.1_minimumScore_10000.yaml  gmapping_delta_0.1_minimumScore_10000.pgm  gmapping_delta_0.1_minimumScore_10000.yaml  gmapping_delta_0.1_minimumScore_10000_2.pgm  gmapping_delta_0.1_minimumScore_10000_2.yaml  gmapping_delta_0.1_minimumScore_10000_3.pgm  gmapping_delta_0.1_minimumScore_10000_3.yaml  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_100.pgm  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_100.yaml  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_100_2.pgm  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_100_2.yaml  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_30.pgm  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_30.yaml  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_30_2.pgm  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_30_2.yaml  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_30_3.pgm  gmapping_delta_0.1_minimumScore_10000_srr_srt_str_0_stt_0.1_particles_30_3.yaml  gmapping_delta_0.1_minimumScore_10000_srr_srt_stt_str_0_particles_1.pgm  gmapping_delta_0.1_minimumScore_10000_srr_srt_stt_str_0_particles_1.yaml  gmapping_particles_100.pgm  gmapping_particles_100.yaml  gmapping_particles_100_maxUrange_2.0.pgm  gmapping_particles_100_maxUrange_2.0.yaml  gmapping_particles_100_maxUrange_4.99_map_update_interval_1.0.pgm  gmapping_particles_100_maxUrange_4.99_map_update_interval_1.0.yaml  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5.pgm  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5.yaml  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_delta_0.05.pgm  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_delta_0.05.yaml  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_minimumScore_250.pgm  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_minimumScore_250.yaml  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_minimumScore_50.pgm  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_minimumScore_50.yaml  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_minimumScore_500.pgm  gmapping_particles_100_maxUrange_4.99_minmaxxyrange_5_minimumScore_500.yaml  (+22 more)
frobo_apps/: CMakeLists.txt  README.md  package.xml
frobo_apps/launch/: follower2.launch  object_follower.launch
frobo_apps/nodes/: object_follower.py
frobo_bringup/: CMakeLists.txt  README.md  package.xml
frobo_bringup/config/: fake_frobo_arbotix.yaml
frobo_bringup/firmware/sonarPublisherROS/: sonarPublisherROS.ino
frobo_bringup/launch/: fake_frobo.launch  fake_laser.launch  kinect.launch  kinect_pointcloud.launch  kinect_rgb.launch
frobo_bringup/scripts/: connectArduinoMotor.sh  follower.sh  imuStart.sh  kinectStart.sh  kinectStop.sh  laserStart.sh  mapStart.sh  ntp.sh  patrol.sh  robotStart.sh  sonarStart.sh  speechNav.sh  stallDetection.sh  talk.sh  talkback.sh
frobo_description/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
frobo_description/launch/: frobo_description.launch
frobo_description/meshes/: base.stl  robot.stl
frobo_description/old/urdfv1/: base.urdf.swivel.xacro  base.urdf.swivel_mesh.xacro  base.urdf.xacro  frobo.urdf  frobo.urdf.xacro  sonar_sensor.urdf.xacro
frobo_description/old/urdfv2/: base.urdf.xacro  frobo.urdf
frobo_description/rviz/: model.rviz
frobo_description/urdf/: base.urdf.xacro  frobo.gazebo  frobo.urdf  frobo.urdf.xacro  imu.urdf.xacro  kinect_camera.urdf.xacro  lidar.urdf.xacro  materials.urdf.xacro
frobo_follower/: CMakeLists.txt  README.md  package.xml
frobo_follower/cfg/: Follower.cfg
frobo_follower/launch/: follower.launch
frobo_follower/plugins/: nodelets.xml
frobo_follower/src/: follower.cpp
frobo_gazebo/: CMakeLists.txt  README.md  package.xml
frobo_gazebo/launch/: frobo.launch
frobo_nav/: CMakeLists.txt  README.md  package.xml  setup.py
frobo_nav/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
frobo_nav/config/frobo/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
frobo_nav/launch/: frobo_amcl.launch  frobo_demo_amcl.launch  frobo_move_base.launch  frobo_move_base_blank_map.launch  frobo_nav_test.launch  frobo_stall_detect.launch
frobo_nav/maps/: hector_laser_map_360.pgm  hector_laser_map_360.yaml
frobo_nav/nodes/: nav_calibrate_angular_ccw.py  nav_calibrate_angular_cw.py  nav_calibrate_linear.py  nav_stall.py  nav_test.py  nav_umbmark_ccw.py  nav_umbmark_cw.py
frobo_speech/: CMakeLists.txt  README.md  package.xml
frobo_speech/config/: frobo.dic  frobo.lm  frobo.log_pronounce  frobo.sent  frobo.txt  frobo.vocab
frobo_speech/launch/: frobo_speech_nav.launch  talkback.launch
frobo_speech/nodes/: voice_nav_move.py
frobo_vision/: CMakeLists.txt  README.md  package.xml  setup.py
frobo_vision/launch/: camshift.launch
frobo_vision/nodes/: camshift.py
frobo_vision/src/frobo_vision/: ros2opencv2.py
hardware/: RobotBom_eng.ods  test
rbx1_config/rbx1_bringup/launch/: depth.launch  fake_laser.launch  produce-frobo.launch
rbx1_config/rbx1_nav/config/frobo/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rbx1_config/rbx1_nav/launch/: frobo_demo_amcl.launch  frobo_move_base_blank_map.launch  frobo_nav_test.launch
rbx1_config/rbx1_nav/maps/: my_map.pgm
rbx1_config/rbx1_nav/nodes/: nav_test.py
rgbd_launch/launch/includes/: depth.launch.xml
ros-arduino-bridge-config/: arduino.launch  frobo_arduino_params.yaml
scripts/: connectArduino.sh  doMap.sh  kinectStart.sh  mapStart.sh  patrol.sh
