<package>
  <name>frobo_speech</name>
  <version>1.0.0</version>

  <description>Frobo Speech Package</description>

  <author email="krirobo@gmail.com">Kristof Robot</author>
  <maintainer email="krirobo@gmail.com">Kristof Robot</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/KristofRobot/frobo</url>
  <url type="bugtracker">https://github.com/KristofRobot/frobo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pocketsphinx</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pocketsphinx</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
