<package>
  <name>frobo_vision</name>
  <version>1.0.0</version>

  <description>Frobo Vision Package</description>

  <author email="krirobo@gmail.com">Kristof Robot</author>
  <maintainer email="krirobo@gmail.com">Kristof Robot</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/KristofRobot/frobo</url>
  <url type="bugtracker">https://github.com/KristofRobot/frobo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>

  </export>
</package>
